@@ -3,10 +3,10 @@ title: Utilisation des ressources connectées pour partager des ressources DAM d
 description: Utilisez des ressources disponibles pour un déploiement  [!DNL Adobe Experience Manager Assets] deployment when creating your web pages on another [!DNL Adobe Experience Manager Sites]  à distance.
 contentOwner: AG
 translation-type: tm+mt
-source-git-commit: 29c3ca56281c482f195d84590ceb4ef07c556e64
+source-git-commit: caf50490c573c2f119f2cbfa14ee7cca12854364
 workflow-type: tm+mt
-source-wordcount: '2240'
-ht-degree: 89%
+source-wordcount: '2688'
+ht-degree: 63%
 
 ---
 
@@ -45,16 +45,17 @@ Les auteurs recherchent des images et les types de documents suivants dans l’o
 
 ### Utilisateurs et groupes concernés {#users-and-groups-involved}
 
-Les différents rôles impliqués pour configurer et utiliser la fonctionnalité et leurs groupes d’utilisateurs correspondants sont décrits ci-dessous. La portée locale est utilisée dans le cas où un auteur crée une page web. La portée distante est utilisée pour le déploiement DAM qui héberge les ressources requises. L’auteur [!DNL Sites] récupère ces ressources distantes.
+Les différents rôles impliqués pour configurer et utiliser la fonctionnalité et leurs groupes d’utilisateurs correspondants sont décrits ci-dessous. La portée locale est utilisée dans le cas où un auteur crée une page web. La portée distante est utilisée pour le déploiement de DAM. L’auteur [!DNL Sites] récupère ces ressources distantes.
 
 | Rôle | Portée | Groupe d’utilisateurs | Nom d’utilisateur de la présentation | Condition requise |
-|----------------------------------|--------|------------------------------------------------------------------------------|--------------------------|--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
+|------|--------|-----------|-----|----------|
 | Administrateur [!DNL Sites] | Local | [!DNL Experience Manager] `administrators` | `admin` | Configurez [!DNL Experience Manager], ainsi que l’intégration au déploiement [!DNL Assets] distant. |
 | Utilisateur DAM | Local | `Authors` | `ksaner` | Utilisé pour afficher et dupliquer les ressources récupérées au niveau de `/content/DAM/connectedassets/`. |
-| Auteur [!DNL Sites] | Local | `Authors` (avec les droits d’accès en lecture sur l’instance DAM distante et l’accès en tant qu’auteur sur l’instance [!DNL Sites] locale) | `ksaner` | Les utilisateurs finaux sont des auteurs [!DNL Sites] qui utilisent cette intégration pour améliorer leur vélocité de contenu. Les auteurs recherchent et parcourent les ressources dans des fichiers DAM distants à l’aide de l’[!UICONTROL outil de recherche de contenu] et utilisent les images requises dans les pages web locales. Les identifiants de l’utilisateur DAM `ksaner` sont utilisés. |
+| Auteur [!DNL Sites] | Local | <ul><li>`Authors` (avec les droits d’accès en lecture sur l’instance DAM distante et l’accès en tant qu’auteur sur l’instance [!DNL Sites] locale) </li> <li>`dam-users` sur local  [!DNL Sites]</li></ul> | `ksaner` | Les utilisateurs finaux sont des auteurs [!DNL Sites] qui utilisent cette intégration pour améliorer leur vélocité de contenu. Les auteurs recherchent et parcourent les ressources dans des fichiers DAM distants à l’aide de l’[!UICONTROL outil de recherche de contenu] et utilisent les images requises dans les pages web locales. Les identifiants de l’utilisateur DAM `ksaner` sont utilisés. |
 | Administrateur [!DNL Assets] | Distant | [!DNL Experience Manager] `administrators` | `admin` sur [!DNL Experience Manager] distant | Configurez le partage des ressources cross-origin (CORS). |
 | Utilisateur DAM | Distant | `Authors` | `ksaner` sur [!DNL Experience Manager] distant | Rôle d’auteur sur le déploiement [!DNL Experience Manager] distant. Recherchez et parcourez les ressources dans la fonction Ressources connectées à l’aide de l’[!UICONTROL outil de recherche de contenu]. |
-| Distributeur DAM (utilisateur technique) | Distant | [!DNL Sites] `Authors` | `ksaner` sur [!DNL Experience Manager] distant | Cet utilisateur présent sur le déploiement distant est utilisé par le serveur local [!DNL Experience Manager] (et non le rôle d’auteur [!DNL Sites]) pour récupérer les ressources distantes, au nom de l’auteur [!DNL Sites]. Ce rôle n’est pas identique aux deux rôles `ksaner` ci-dessus et appartient à un groupe d’utilisateurs différent.  |
+| Distributeur DAM (utilisateur technique) | Distant | <ul> <li> [!DNL Sites] `Authors`</li> <li> `connectedassets-assets-techaccts` </li> </ul> | `ksaner` sur [!DNL Experience Manager] distant | Cet utilisateur présent sur le déploiement distant est utilisé par le serveur local [!DNL Experience Manager] (et non le rôle d’auteur [!DNL Sites]) pour récupérer les ressources distantes, au nom de l’auteur [!DNL Sites]. Ce rôle n’est pas identique aux deux rôles `ksaner` ci-dessus et appartient à un groupe d’utilisateurs différent.  |
+| [!DNL Sites] utilisateur technique | Local | `connectedassets-sites-techaccts` | - | Permet au déploiement de [!DNL Assets] de rechercher des références à des ressources dans les pages Web [!DNL Sites]. |
 
 ## Configurez une connexion entre les déploiements [!DNL Sites] et [!DNL Assets] {#configure-a-connection-between-sites-and-assets-deployments}
 
@@ -62,29 +63,28 @@ Un administrateur [!DNL Experience Manager] peut créer cette intégration. Une 
 
 Pour configurer les ressources connectées et la connectivité des [!DNL Sites] locaux, procédez comme suit :
 
-1. Accédez à un déploiement [!DNL Sites] existant ou créez-en un à l’aide de la commande suivante :
+1. Accédez à un déploiement [!DNL Sites] existant. Ce déploiement [!DNL Sites] est utilisé pour la création de pages Web, par exemple à `https://[sites_servername]:port`. Au fur et à mesure que la création de pages se produit lors du déploiement [!DNL Sites], appelons le déploiement [!DNL Sites] local du point de vue de la création de pages.
 
-   1. Dans le dossier du fichier JAR, exécutez la commande ci-dessous sur un terminal pour créer chaque serveur [!DNL Experience Manager].
-      `java -XX:MaxPermSize=768m -Xmx4096m -jar <quickstart jar filepath> -r samplecontent -p 4502 -nofork -gui -nointeractive &`
+1. Accédez à un déploiement [!DNL Assets] existant. Ce déploiement [!DNL Assets] est utilisé pour gérer les ressources numériques, par exemple à `https://[assets_servername]:port`.
 
-   1. Au bout de quelques minutes, le serveur [!DNL Experience Manager] démarre. Considérez ce déploiement [!DNL Sites] comme l’ordinateur local pour la création de pages web, par exemple à l’adresse `https://[local_sites]:4502`.
+1. Assurez-vous que les utilisateurs et les rôles avec la portée appropriée existent sur le déploiement [!DNL Sites] et sur le déploiement [!DNL Assets] sur AMS. Créez un utilisateur technique sur le déploiement [!DNL Assets] et ajoutez-le au groupe d’utilisateurs mentionné dans les [Utilisateurs et groupes concernés](/help/assets/use-assets-across-connected-assets-instances.md#users-and-groups-involved).
 
-1. Vérifiez que les utilisateurs et les rôles avec la portée locale existent pour le déploiement [!DNL Sites] ainsi que pour le déploiement [!DNL Assets] sur AMS. Créez un utilisateur technique sur le déploiement [!DNL Assets] et ajoutez-le au groupe d’utilisateurs mentionné dans les [Utilisateurs et groupes concernés](/help/assets/use-assets-across-connected-assets-instances.md#users-and-groups-involved).
+1. Accédez au déploiement [!DNL Sites] local à l’adresse `https://[sites_servername]:port`. Cliquez sur **[!UICONTROL Outils]** > **[!UICONTROL Ressources]** > **[!UICONTROL Configuration des ressources connectées]**. Indiquez les valeurs suivantes :
 
-1. Accédez au déploiement [!DNL Sites] local à l’adresse `https://[local_sites]:4502`. Cliquez sur **[!UICONTROL Outils]** > **[!UICONTROL Ressources]** > **[!UICONTROL Configuration de ressources connectées]** et fournissez les valeurs suivantes :
-
-   1. L’emplacement de [!DNL Assets] est `https://[assets_servername_ams]:[port]`.
+   1. **[!UICONTROL Titre]** de la configuration.
+   1. **[!UICONTROL L&#39;]** URL DAM distante est l&#39;URL de l&#39; [!DNL Assets] emplacement au format  `https://[assets_servername]:[port]`.
    1. Identifiants d’un distributeur DAM (utilisateur technique).
-   1. Dans le champ **[!UICONTROL Point de montage]**, entrez le chemin local [!DNL Experience Manager] où [!DNL Experience Manager] récupère les ressources. Par exemple, le dossier `remoteassets`.
+   1. Dans le champ **[!UICONTROL Point de montage]**, entrez le chemin local [!DNL Experience Manager] où [!DNL Experience Manager] récupère les ressources. Par exemple, le dossier `connectedassets`. Les ressources extraites de DAM sont stockées dans ce dossier sur le déploiement [!DNL Sites].
+   1. **[!UICONTROL L’]** URL des sites locaux correspond à l’emplacement du  [!DNL Sites] déploiement. [!DNL Assets] déploiement utilise cette valeur pour conserver les références aux ressources numériques récupérées par ce  [!DNL Sites] déploiement.
+   1. Informations d’identification de l’utilisateur technique [!DNL Sites].
+   1. La valeur du champ **[!UICONTROL Seuil d&#39;optimisation du transfert binaire d&#39;origine]** indique si les ressources d&#39;origine (y compris les rendus) sont transférées de manière synchrone ou non. Il est possible de récupérer facilement les fichiers de taille inférieure, tandis que les fichiers de taille de fichier relativement importante sont mieux synchronisés de manière asynchrone. La valeur dépend de vos capacités réseau.
+   1. Sélectionnez **[!UICONTROL Entrepôt de données partagé avec les ressources connectées]** si vous utilisez un entrepôt de données pour stocker vos ressources et qu’elle constitue le support de stockage commun aux deux déploiements. Dans ce cas, la limite de seuil n’a pas d’importance puisque des fichiers binaires réels sont disponibles sur la banque de données et ne sont pas transférés.
 
-   1. Ajustez les valeurs du **[!UICONTROL Seuil d’optimisation du transfert du binaire d’origine]** en fonction de votre réseau. Un rendu de ressource dont la taille est supérieure à ce seuil est transféré de façon asynchrone. 
-   1. Sélectionnez **[!UICONTROL Entrepôt de données partagé avec les ressources connectées]** si vous utilisez un entrepôt de données pour stocker vos ressources et qu’elle constitue le support de stockage commun aux deux déploiements. Dans ce cas, la limite de seuil n’a pas d’importance, car les fichiers binaires de ressources se trouvent dans l’entrepôt de données et ne sont pas transférés.
+   ![Configuration standard de la fonctionnalité Ressources connectées](assets/connected-assets-typical-config.png)
 
-   ![Exemple de configuration standard pour les ressources connectées](assets/connected-assets-typical-config.png)
+   *Figure : Configuration standard de la fonctionnalité Ressources connectées.*
 
-   *Figure : exemple de configuration standard pour les ressources connectées.*
-
-1. Lorsque les ressources sont déjà traitées et que les rendus sont récupérés, désactivez les lanceurs de workflow. Réglez les configurations du lanceur sur le déploiement local ([!DNL Sites]) pour exclure le dossier `connectedassets` où les ressources distantes sont récupérées.
+1. Les ressources numériques existantes sur le déploiement [!DNL Assets] sont déjà traitées et les rendus sont générés. Elles sont récupérées à l’aide de cette fonctionnalité, de sorte qu’il n’est pas nécessaire de régénérer les rendus. Désactivez les lanceurs de processus pour empêcher la régénération des rendus. Ajustez les configurations de lanceur sur le déploiement ([!DNL Sites]) pour exclure le dossier `connectedassets` (les ressources sont extraites dans ce dossier).
 
    1. Sur le déploiement [!DNL Sites], cliquez sur **[!UICONTROL Outils]** > **[!UICONTROL Workflow]** > **[!UICONTROL Lanceurs]**.
 
@@ -104,13 +104,9 @@ Pour configurer les ressources connectées et la connectivité des [!DNL Sites] 
    >
    >Tous les rendus disponibles sur le déploiement distant sont récupérés lorsque les auteurs obtiennent une ressource. Si vous souhaitez créer d’autres rendus d’une ressource récupérée, ignorez cette étape de configuration. Le workflow [!UICONTROL Ressources de mise à jour de gestion des actifs numériques] est déclenché et crée d’autres rendus. Ces rendus sont disponibles uniquement sur le déploiement [!DNL Sites] local, et non sur le déploiement DAM distant.
 
-1. Ajoutez le déploiement [!DNL Sites] comme l’une des **[!UICONTROL Origines autorisées]** sur la configuration [!DNL Assets'] CORS distante.
+1. Ajoutez le déploiement [!DNL Sites] comme origine autorisée dans la configuration CORS du déploiement [!DNL Assets]. Pour plus d&#39;informations, voir [comprendre CORS](https://experienceleague.adobe.com/docs/experience-manager-learn/foundation/security/understand-cross-origin-resource-sharing.html).
 
-   1. Connectez-vous à l’aide des informations d’identification d’administrateur. Recherchez `Cross-Origin`. Accédez à **[!UICONTROL Outils]** > **[!UICONTROL Opérations]** > **[!UICONTROL Console web]**.
-
-   1. Pour créer une configuration CORS concernant le déploiement [!DNL Sites], cliquez sur l’option Ajouter ![icône Ajouter des ressources](assets/do-not-localize/aem_assets_add_icon.png) en regard de **[!UICONTROL Adobe Granite Cross-Origin Resource Sharing Policy]**.
-
-   1. Dans le champ **[!UICONTROL Origines autorisées]**, entrez l’URL de l’instance locale [!DNL Sites], c’est-à-dire `https://[local_sites]:[port]`. Enregistrez la configuration.
+<!-- TBD: Check if Launchers are to be disabled on CS instances. Is this option even available to the users on CS? -->
 
 ## Utilisation des ressources distantes  {#use-remote-assets}
 
@@ -140,17 +136,17 @@ Utilisez la configuration ci-dessus pour découvrir l’expérience de création
 
    *Figure : Options de filtrage des types de documents et des images lors de la recherche de fichiers sur DAM distant.*
 
-1. Un auteur de site est informé de la récupération asynchrone d’une ressource et de l’échec d’une tâche de récupération. Les auteurs peuvent consulter les informations détaillées sur la récupération des tâches et des erreurs dans l’[interface utilisateur](/help/operations/asynchronous-jobs.md) des tâches asynchrones pendant, voire après la création.
+1. Un auteur de site est informé de la récupération asynchrone d’une ressource et de l’échec d’une tâche de récupération. Lors de la création ou même après la création, les auteurs peuvent consulter des informations détaillées sur la récupération des tâches et des erreurs dans l’interface utilisateur [tâches asynchrones](/help/operations/asynchronous-jobs.md).
 
    ![Notification concernant la récupération asynchrone en arrière-plan des ressources.](assets/assets_async_transfer_fails.png)
 
    *Figure : Notification concernant la récupération asynchrone en arrière-plan des ressources.*
 
-1. [!DNL Experience Manager] affiche la liste complète des ressources utilisées sur une page lorsqu’elle est publiée. Veillez à bien récupérer les fichiers distants au moment de la publication. Pour vérifier l’état de chaque ressource récupérée, reportez-vous à l’interface utilisateur des [tâches asynchrones](/help/operations/asynchronous-jobs.md).
+1. [!DNL Experience Manager] affiche la liste complète des ressources utilisées sur une page lorsqu’elle est publiée. Veillez à bien récupérer les fichiers distants au moment de la publication. Pour vérifier l’état de chaque ressource récupérée, voir [interface utilisateur des tâches asynchrones](/help/operations/asynchronous-jobs.md).
 
    >[!NOTE]
    >
-   >Cette page est publiée même en cas de non-récupération d’une ou plusieurs ressources distantes. Le composant utilisant la ressource distante est publié vide. La zone de notification [!DNL Experience Manager] affiche la notification des erreurs qui apparaissent sur la page des tâches asynchrones.
+   >Cette page est publiée même en cas de non-récupération d’une ou plusieurs ressources distantes. Le composant utilisant la ressource distante est publié vide. La zone de notification [!DNL Experience Manager] affiche une notification pour les erreurs qui s’affichent dans la page des tâches asynchrones.
 
 >[!CAUTION]
 >
@@ -158,15 +154,22 @@ Utilisez la configuration ci-dessus pour découvrir l’expérience de création
 
 Les ressources récupérées peuvent être utilisées comme n’importe quelle autre ressource locale, à la différence que les métadonnées associées ne peuvent pas être modifiées.
 
-<!-- TBD: Uncomment after verification for Dec release.
+### Vérifier l&#39;utilisation d&#39;un fichier sur plusieurs pages Web {#asset-usage-references}
 
-### Check use of an asset across other pages {#asset-usage-references}
+[!DNL Experience Manager] permet aux utilisateurs DAM de vérifier toutes les références à une ressource. Il permet de comprendre et de gérer l’utilisation d’un fichier dans des ressources distantes [!DNL Sites] et dans des ressources composées. De nombreux auteurs de pages Web sur le déploiement de [!DNL Experience Manager Sites] peuvent utiliser une ressource sur une [!DNL Assets] distante dans différentes pages Web. Pour simplifier la gestion des ressources et ne pas générer de références rompues, il est important que les utilisateurs DAM vérifient l’utilisation d’une ressource sur les pages Web locales et distantes. L&#39;onglet [!UICONTROL Références] de la page [!UICONTROL Propriétés] d&#39;une ressource liste les références locales et distantes de la ressource.
 
-[!DNL Experience Manager] also lets you check all the incoming references to an asset, that is, the usage of an asset in remote [!DNL Sites] and in compound assets. Authors of webpages on [!DNL Experience Manager Sites] deployment can use an asset on a remote [!DNL Assets] deployment using the Connected Assets functionality. The [!UICONTROL References] tab in an asset's [!UICONTROL Properties] page lists the local and remote references of the asset.
+Pour vue et gérer les références sur le déploiement [!DNL Assets], procédez comme suit :
 
-Users can view incoming references of the assets and move or delete the asset.
+1. Sélectionnez un fichier dans la console [!DNL Assets] et cliquez sur **[!UICONTROL Propriétés]** dans la barre d&#39;outils.
+1. Cliquez sur **[!UICONTROL Références]** onglet. Voir **[!UICONTROL Références locales]** pour l’utilisation de la ressource sur le déploiement [!DNL Assets]. Voir **[!UICONTROL Références distantes] pour l’utilisation de la ressource dans le déploiement [!DNL Sites] où la ressource a été récupérée à l’aide de la fonctionnalité Ressources connectées.
 
--->
+   ![références distantes dans les propriétés de ressources](assets/connected-assets-remote-reference.png)
+
+1. Les références des pages [!DNL Sites] indiquent le nombre total de références pour chaque [!DNL Sites] local. Il peut s&#39;écouler un certain temps avant de trouver toutes les références et d&#39;afficher le nombre total de références.
+1. La liste des références est interactive et les utilisateurs DAM peuvent cliquer sur une référence pour ouvrir la page de référence. Si les références distantes ne peuvent pas être extraites pour une raison quelconque, une notification s’affiche pour informer l’utilisateur de l’échec.
+1. Les utilisateurs peuvent déplacer ou supprimer le fichier. Lors du déplacement ou de la suppression d’un fichier, le nombre total de références de tous les fichiers/dossiers sélectionnés s’affiche dans une boîte de dialogue d’avertissement. Lors de la suppression d’un fichier pour lequel les références ne sont pas encore affichées, une boîte de dialogue d’avertissement s’affiche.
+
+   ![avertissement de suppression de force](assets/delete-referenced-asset.png)
 
 ## Restrictions et bonnes pratiques {#tip-and-limitations}
 
@@ -198,13 +201,18 @@ Users can view incoming references of the assets and move or delete the asset.
 * Les modifications simples non destructives et les modifications prises en charge par le composant `Image` peuvent être effectuées sur les ressources récupérées. Les ressources sont en lecture seule.
 * La seule méthode pour récupérer à nouveau la ressource consiste à la faire glisser sur une page. Il n’existe aucune prise en charge d’API ni aucune autre méthode pour récupérer à nouveau une ressource afin de la mettre à jour.
 * Si des ressources sont désaffectées de la gestion des ressources numériques, elles continuent d’être utilisées sur les pages [!DNL Sites].
+* Les entrées de référence distantes d’une ressource sont extraites de manière asynchrone. Les références et le nombre total ne sont pas en temps réel et il peut y avoir une différence si un auteur de sites utilise la ressource alors qu&#39;un utilisateur de gestion des actifs numériques consulte la référence. Les utilisateurs DAM peuvent actualiser la page et réessayer dans quelques minutes pour obtenir le nombre total.
 
 ## Résolution des problèmes  {#troubleshoot}
 
-Pour résoudre le scénario d’erreur courant, procédez comme suit :
+Pour résoudre les erreurs courantes, procédez comme suit :
 
 * Si vous ne parvenez pas à rechercher des ressources distantes à partir de l&#39;[!UICONTROL Outil de recherche de contenu], assurez-vous que les rôles et autorisations requis sont en place.
 * Une ressource récupérée à partir du DAM distant peut ne pas être publiée sur une page web pour une ou plusieurs raisons, notamment son absence sur le serveur distant, l’absence d’autorisations appropriées pour la récupérer ou une défaillance du réseau. Assurez-vous que la ressource n’est pas supprimée du DAM distant. Assurez-vous que les autorisations appropriées sont en place et que les conditions préalables sont remplies. Essayez de rajouter la ressource à la page et de la republier. Recherchez dans la [liste des tâches asynchrones](/help/operations/asynchronous-jobs.md) les erreurs de récupération de ressources.
 * Si vous ne pouvez pas accéder au déploiement DAM distant à partir du déploiement local [!DNL Sites], assurez-vous que les cookies intersites sont autorisés. Si des cookies intersites sont bloqués, les deux déploiements de [!DNL Experience Manager] peuvent ne pas s&#39;authentifier. Par exemple, [!DNL Google Chrome] en mode Incognito peut bloquer les cookies tiers. Pour autoriser les cookies dans le navigateur [!DNL Chrome], cliquez sur l&#39;icône &quot;oeil&quot; dans la barre d&#39;adresse, accédez à Site Not Working > Block, sélectionnez l&#39;URL DAM distante et autorisez le cookie de jeton de connexion. Vous pouvez également consulter l’aide [sur la façon d’activer les cookies tiers](https://support.google.com/chrome/answer/95647).
 
    ![Erreur de cookie dans Chrome en mode incognito](assets/chrome-cookies-incognito-dialog.png)
+
+* Si les références distantes ne sont pas récupérées et génèrent un message d’erreur, vérifiez si le déploiement des sites est disponible et recherchez les problèmes de connectivité réseau. Réessayez ultérieurement pour vérifier. [!DNL Assets] le déploiement tente à deux reprises d’établir une connexion avec le  [!DNL Sites] déploiement, puis signale un échec.
+
+![échec de la nouvelle tentative de références distantes de ressources](assets/reference-report-failure.png)
